# speakable-time

./: Cargo.toml  LICENSE  README.md
examples/: generate-random-times.rs  relative-to-now.rs
src/: lib.rs  time_boundary.rs
src/approximate/: mod.rs
src/approximate/format_generator/: formats.rs  mod.rs
src/enums/: mod.rs  words.rs
src/translator/: loader.rs  mod.rs
st-locales/: C.yml
