[package]
name = "speakable-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
chrono-tz = "^0.8"
lazy_static = "^1"
anyhow = "^1"

include_dir = { version = "^0.7", optional = true }
serde = { version = "^1", optional = true }
serde_yaml = { version = "^0.9", optional = true }
sys-locale = { version = "^0.3", optional = true }

[dev-dependencies]
rand = "^0.8"
clap = { version = "^4", features = [ "derive" ] }

[features]
default = [ ]
translation = [ "dep:include_dir", "dep:serde", "dep:serde_yaml", "dep:sys-locale" ]
